--- a/package.json
+++ b/package.json
@@ -92,7 +92,7 @@
         "e2e": "rimraf test/e2e/mock-template-build && mocha test/e2e/test.js --slow 1000",
         "lint": "eslint test/e2e/test*.js lib bin/* --env mocha",
         "test": "npm run lint && npm run e2e",
-        "start": "git commit -m  && npm version patch && npm publish"
+        "start": "git add . && git commit -m '发包' && npm version patch && npm publish"
     },
     "version": "1.0.32"
 }
